Added cylinder projection

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -106,15 +106,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of normalized resultantant forces\n",
+      "Loaded model N400_Mono_Test16_Push\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [01:33<00:00,  3.61s/it]\n",
+      "d:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Evaluation.py:223: RuntimeWarning: invalid value encountered in divide\n",
+      "  Fres_size_normalized  = Fres_norm/F_vectors_norm_sum\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Model:                                             nan\n",
+      "Ground truth                                      0.023291\n",
+      "Loaded model N400_Mono_Test32_Push\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [01:30<00:00,  3.49s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Model:                                             nan\n",
+      "Loaded model N400_Mono_Test64_Push\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 46%|████▌     | 12/26 [00:45<00:52,  3.78s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m Evaluation_function\u001b[38;5;241m=\u001b[39mEvaluation(mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmechanics_mean\u001b[39m\u001b[38;5;124m'\u001b[39m,print_results\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m#model_idents = [\"Allout\",'Forward_Bundle','Forward','Bundle', 'Onestep']\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m metrics \u001b[38;5;241m=\u001b[39m CompareModels(dataset_name        \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mN400_Mono\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m                         model_idents        \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTest16\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTest32\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTest64\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTest128\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      6\u001b[0m                         Evaluation_function \u001b[38;5;241m=\u001b[39m Evaluation_function)\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Evaluation.py:317\u001b[0m, in \u001b[0;36mCompareModels\u001b[1;34m(dataset_name, model_idents, Evaluation_function)\u001b[0m\n\u001b[0;32m    314\u001b[0m AggregatedArgs \u001b[38;5;241m=\u001b[39m MaskTestData(dataset_name,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    316\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, model_ident \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(model_idents):\n\u001b[1;32m--> 317\u001b[0m     datalist_ML, datalist_GT \u001b[38;5;241m=\u001b[39m AggregatedRollouts(dataset_name,\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_ident\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Push\u001b[39m\u001b[38;5;124m\"\u001b[39m,AggregatedArgs)\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n\u001b[0;32m    319\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Evaluation.py:235\u001b[0m, in \u001b[0;36mAggregatedRollouts\u001b[1;34m(dataset_name, model_ident, AggregatedArgs)\u001b[0m\n\u001b[0;32m    233\u001b[0m datalist_GT \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    234\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sample_idx \u001b[38;5;129;01min\u001b[39;00m trange(AggregatedArgs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]):\n\u001b[1;32m--> 235\u001b[0m     Simulation\u001b[38;5;241m.\u001b[39mRollout(\u001b[38;5;241m*\u001b[39mAggregatedArgs,sample_idx)\n\u001b[0;32m    236\u001b[0m     datalist_ML\u001b[38;5;241m.\u001b[39mappend(Simulation\u001b[38;5;241m.\u001b[39mML_rollout)\n\u001b[0;32m    237\u001b[0m     datalist_GT\u001b[38;5;241m.\u001b[39mappend(Simulation\u001b[38;5;241m.\u001b[39mGroundTruth)\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\ML_functions.py:114\u001b[0m, in \u001b[0;36mLearnedSimulator.Rollout\u001b[1;34m(self, data_agr, top_agr, BC_agr, i, show_tqdm)\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msuper_topology \u001b[38;5;241m=\u001b[39m ConstructTopology(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpar_data[\u001b[38;5;241m0\u001b[39m],\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mBC_rollout[\u001b[38;5;241m0\u001b[39m],\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msuper_tol)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mGroundTruth \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mGroundTruth_Rollout(show_tqdm)\n\u001b[1;32m--> 114\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mML_rollout \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mMLRollout(show_tqdm)\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\ML_functions.py:103\u001b[0m, in \u001b[0;36mLearnedSimulator.MLRollout\u001b[1;34m(self, show_tqdm)\u001b[0m\n\u001b[0;32m    101\u001b[0m     BC[:,:\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m BC[:,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3\u001b[39m:]\n\u001b[0;32m    102\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtimesteps,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbundle_size),initial\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,disable \u001b[38;5;241m=\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m show_tqdm):\n\u001b[1;32m--> 103\u001b[0m         par_inp, BC, MatlabTopology \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mRollout_Step(par_inp, BC, MatlabTopology,ML_Rollout)\n\u001b[0;32m    105\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ML_Rollout\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\ML_functions.py:76\u001b[0m, in \u001b[0;36mLearnedSimulator.Rollout_Step\u001b[1;34m(self, par_inp, BC, MatlabTopology, ML_Rollout)\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m displacement \u001b[38;5;129;01min\u001b[39;00m output:\n\u001b[0;32m     75\u001b[0m     par_inp[:,:\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m=\u001b[39m par_inp[:,:\u001b[38;5;241m3\u001b[39m]\u001b[38;5;241m+\u001b[39mdisplacement[input_data\u001b[38;5;241m.\u001b[39mmask]\n\u001b[1;32m---> 76\u001b[0m     MatlabTopology \u001b[38;5;241m=\u001b[39m TopologyFromPlausibleTopology(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msuper_topology,par_inp,BC,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtol)\n\u001b[0;32m     78\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m ML_Rollout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     79\u001b[0m         data \u001b[38;5;241m=\u001b[39m ToPytorchData(par_inp,BC,\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtol,MatlabTopology)[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[1;32md:\\TUE\\Master\\Graduation\\Repos\\DEM-GNN\\Encoding.py:317\u001b[0m, in \u001b[0;36mTopologyFromPlausibleTopology\u001b[1;34m(super_topology, par_data, BC_t, tol)\u001b[0m\n\u001b[0;32m    315\u001b[0m [idx_i,pos_i,radius_i] \u001b[38;5;241m=\u001b[39m TopologySlice(super_topology_PP,par_data,\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m    316\u001b[0m [idx_j,pos_j,radius_j] \u001b[38;5;241m=\u001b[39m TopologySlice(super_topology_PP,par_data,\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 317\u001b[0m mask_PP \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(np\u001b[38;5;241m.\u001b[39mndarray\u001b[38;5;241m.\u001b[39mastype(pos_i\u001b[38;5;241m-\u001b[39mpos_j,\u001b[38;5;28mfloat\u001b[39m),axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m-\u001b[39m(radius_i\u001b[38;5;241m+\u001b[39mradius_j) \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m tol\u001b[38;5;241m*\u001b[39mR_avg\n\u001b[0;32m    318\u001b[0m topology_PP \u001b[38;5;241m=\u001b[39m super_topology_PP[mask_PP]\n\u001b[0;32m    320\u001b[0m [idx_i,pos_i,radius_i] \u001b[38;5;241m=\u001b[39m TopologySlice(super_topology_PW,par_data,\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\Gebruiker\\anaconda3\\envs\\DEM-GNN\\Lib\\site-packages\\numpy\\linalg\\_linalg.py:2833\u001b[0m, in \u001b[0;36mnorm\u001b[1;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[0;32m   2830\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mord\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m2\u001b[39m:\n\u001b[0;32m   2831\u001b[0m     \u001b[38;5;66;03m# special case for speedup\u001b[39;00m\n\u001b[0;32m   2832\u001b[0m     s \u001b[38;5;241m=\u001b[39m (x\u001b[38;5;241m.\u001b[39mconj() \u001b[38;5;241m*\u001b[39m x)\u001b[38;5;241m.\u001b[39mreal\n\u001b[1;32m-> 2833\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m sqrt(add\u001b[38;5;241m.\u001b[39mreduce(s, axis\u001b[38;5;241m=\u001b[39maxis, keepdims\u001b[38;5;241m=\u001b[39mkeepdims))\n\u001b[0;32m   2834\u001b[0m \u001b[38;5;66;03m# None of the str-type keywords for ord ('fro', 'nuc')\u001b[39;00m\n\u001b[0;32m   2835\u001b[0m \u001b[38;5;66;03m# are valid for vectors\u001b[39;00m\n\u001b[0;32m   2836\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mord\u001b[39m, \u001b[38;5;28mstr\u001b[39m):\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "from Evaluation import CompareModels, Evaluation\n",
-    "Evaluation_function=Evaluation(mode='mechanics_mean',print_results=False)\n",
+    "Evaluation_function=Evaluation(mode='mechanics_mean',print_results=True)\n",
     "#model_idents = [\"Allout\",'Forward_Bundle','Forward','Bundle', 'Onestep']\n",
     "metrics = CompareModels(dataset_name        = 'N400_Mono',\n",
-    "                        model_idents        = ['Test16','Test32'],\n",
+    "                        model_idents        = ['Test16','Test32','Test64','Test128'],\n",
     "                        Evaluation_function = Evaluation_function)"
    ]
   },
