--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -45,14 +45,22 @@
    "execution_count": 4,
    "id": "1d639891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 6, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "from Encoding import TopologySlice, CheckForWallContact\n",
     "from Evaluation import NumpyGroupby\n",
     "\n",
     "\n",
     "from Encoding import TopologyFromPlausibleTopology\n",
-    "\n",
+    "print(bc_t.shape)\n",
     "topology = TopologyFromPlausibleTopology(super_topology,par,bc_t)"
    ]
   },
@@ -79,40 +87,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "80668a56",
+   "execution_count": null,
+   "id": "87e04889",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.2771032e-01  7.0110654e-08  3.2672719e-01]\n",
+      " [-1.1330610e-07  3.2771032e-01 -3.2672719e-01]\n",
+      " [ 1.3670361e-07  3.2771032e-01  3.2672719e-01]\n",
+      " [-3.2771032e-01  3.0674740e-08 -3.2672719e-01]]\n",
+      "[[ 0  1]\n",
+      " [ 1 -4]\n",
+      " [ 1 -2]\n",
+      " [ 0 -2]\n",
+      " [ 0 -1]] 4 2\n",
+      "[[0 1]\n",
+      " [1 2]\n",
+      " [1 3]\n",
+      " [0 4]\n",
+      " [0 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from Encoding import GetVirtualParticlesCoords\n",
+    "P_wall, normal_vectors = GetVirtualParticlesCoords(par,topology,bc_t)\n",
+    "\n",
+    "P_virtual = np.concatenate((P_wall,\n",
+    "                            np.zeros((P_wall.shape[0],3)),                      \n",
+    "                            normal_vectors,\n",
+    "                            np.zeros((P_wall.shape[0],1))),                      \n",
+    "                            axis=1)\n",
+    "print(P_wall)\n",
+    "top_new = topology.copy()\n",
+    "n_new = P_virtual.shape[0]\n",
+    "n_par = par.shape[0]\n",
+    "top_new[-n_new:,1] = np.arange(n_par,n_new+n_par,1)\n",
+    "print(top_new)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "778ff84c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[ 0,  1],\n",
-       "        [ 0, -1],\n",
-       "        [ 1, -1],\n",
-       "        [ 0, -2],\n",
-       "        [ 1, -2],\n",
-       "        [ 0, -3],\n",
-       "        [ 1, -3],\n",
-       "        [ 0, -4],\n",
-       "        [ 1, -4],\n",
-       "        [ 0, -5],\n",
-       "        [ 1, -5],\n",
-       "        [ 0, -6],\n",
-       "        [ 1, -6]]),\n",
-       " array([[ 0,  1],\n",
-       "        [ 1, -4],\n",
-       "        [ 1, -2],\n",
-       "        [ 0, -2],\n",
-       "        [ 0, -1]]))"
+       "array([4, 5, 6, 7])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "super_topology,topology"
+    "np.arange(n_new,n_new+n_par,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80668a56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc.shape"
    ]
   },
   {
