--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -23,13 +23,138 @@
    "outputs": [],
    "source": [
     "from Encoding import load\n",
-    "dataset_name = \"2Sphere\"\n",
+    "dataset_name = \"Pill_Mono\"\n",
     "par_data, bc = load(dataset_name,data_type=\"par_data\"), load(dataset_name,data_type=\"bc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "c0fb3f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d90d18d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(par_data[0][0],axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "245250a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Encoding import ProjectPointsToCylinder, ProjectPointsToHyperplane\n",
+    "t = 0\n",
+    "bc_step = bc[0].copy()\n",
+    "bc_step[0]+=bc_step[1]*(t+1)\n",
+    "par = par_data[0][t][:,:3]\n",
+    "def CheckCylindricalBC(points,cyl):\n",
+    "    point_to_cyl_origin = points-cyl[:3]\n",
+    "    cyl_axis = cyl[3:6]/np.linalg.norm(cyl[3:6])\n",
+    "    radius = cyl[6]\n",
+    "\n",
+    "    axis_projection = point_to_cyl_origin*cyl_axis*cyl_axis\n",
+    "    axis_projection += cyl[:3]\n",
+    "    dist_axis = np.linalg.norm(points-axis_projection,axis=1)\n",
+    "\n",
+    "    if cyl[-2] == 1: \n",
+    "        bc_bool = dist_axis <= radius\n",
+    "    if cyl[-2] == -1:\n",
+    "        bc_bool = dist_axis >= radius\n",
+    "\n",
+    "    return bc_bool \n",
+    "\n",
+    "def CheckPlanarBC(points,plane):\n",
+    "    wallpoints = ProjectPointsToHyperplane(points,plane)  \n",
+    "    vector = points-wallpoints \n",
+    "    vector /= np.linalg.norm(vector,axis=1,keepdims=True) \n",
+    "    normal_vector = plane[3:6]\n",
+    "    bc_bool = np.all(vector == normal_vector,axis=1)    \n",
+    "    return bc_bool\n",
+    "\n",
+    "def ValidateBC(par,bc_step):\n",
+    "    bc_bool = np.empty([par.shape[0],bc_step.shape[1]])\n",
+    "    for wall_id,wall in enumerate(bc_step[0]):\n",
+    "        if wall[-1] == 1:\n",
+    "            bc_bool[:,wall_id] = CheckCylindricalBC(par,wall)\n",
+    "        if wall[-1] == 0:\n",
+    "            bc_bool[:,wall_id] = CheckPlanarBC(par,wall)\n",
+    "    return bc_bool\n",
+    "\n",
+    "def ParticlesOutsideBoundary(data_list,bc_rollout):\n",
+    "    outside_particles = np.zeros(len(data_list))\n",
+    "    for t,data,bc_step in enumerate(zip(data_list,bc_rollout)):\n",
+    "        bc_bool = ValidateBC(data.pos[data.mask],bc_step)\n",
+    "        par_in_bounds = np.all(bc_bool,axis=1)\n",
+    "        num_par_out_bounds = np.sum(~par_in_bounds).item()\n",
+    "        outside_particles[t] = num_par_out_bounds\n",
+    "    return outside_particles\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4939f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "487e8a99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(projection='3d')\n",
+    "vector = axis_projection\n",
+    "x = vector[:,0]\n",
+    "y = vector[:,1]\n",
+    "z = vector[:,2]\n",
+    "ax.scatter(x,y,z)\n",
+    "vector = par\n",
+    "x = vector[:,0]\n",
+    "y = vector[:,1]\n",
+    "z = vector[:,2]\n",
+    "ax.scatter(x,y,z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30621b8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vector = axis_projection\n",
+    "x = vector[:,0]\n",
+    "y = vector[:,1]\n",
+    "z = vector[:,2]\n",
+    "plt.plot(x,z,'o',color='b')\n",
+    "vector = par\n",
+    "x = vector[:,0]\n",
+    "y = vector[:,1]\n",
+    "z = vector[:,2]\n",
+    "plt.plot(x,z,'o',color='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b059960c",
    "metadata": {},
    "outputs": [],
@@ -42,18 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1d639891",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 6, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Encoding import TopologySlice, CheckForWallContact\n",
     "from Evaluation import NumpyGroupby\n",
@@ -66,21 +183,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8ab5da4a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((5, 2), (13, 2))"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "topology.shape, super_topology.shape"
    ]
@@ -90,28 +196,7 @@
    "execution_count": null,
    "id": "87e04889",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3.2771032e-01  7.0110654e-08  3.2672719e-01]\n",
-      " [-1.1330610e-07  3.2771032e-01 -3.2672719e-01]\n",
-      " [ 1.3670361e-07  3.2771032e-01  3.2672719e-01]\n",
-      " [-3.2771032e-01  3.0674740e-08 -3.2672719e-01]]\n",
-      "[[ 0  1]\n",
-      " [ 1 -4]\n",
-      " [ 1 -2]\n",
-      " [ 0 -2]\n",
-      " [ 0 -1]] 4 2\n",
-      "[[0 1]\n",
-      " [1 2]\n",
-      " [1 3]\n",
-      " [0 4]\n",
-      " [0 5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "from Encoding import GetVirtualParticlesCoords\n",
@@ -133,21 +218,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "778ff84c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 5, 6, 7])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.arange(n_new,n_new+n_par,1)"
    ]
@@ -208,51 +282,11 @@
    "source": [
     "fig = plt.figure()\n",
     "ax = fig.add_subplot(projection='3d')\n",
-    "vector = P_virtual[:,:3]\n",
+    "vector = proj+wall[:3]\n",
     "x = vector[:,0]\n",
     "y = vector[:,1]\n",
     "z = vector[:,2]\n",
     "ax.scatter(x,y,z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "487e8a99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(projection='3d')\n",
-    "vector = point_on_wall\n",
-    "x = vector[:,0]\n",
-    "y = vector[:,1]\n",
-    "z = vector[:,2]\n",
-    "ax.scatter(x,y,z)\n",
-    "vector = particles\n",
-    "x = vector[:,0]\n",
-    "y = vector[:,1]\n",
-    "z = vector[:,2]\n",
-    "ax.scatter(x,y,z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30621b8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vector = point_on_wall\n",
-    "x = vector[:,0]\n",
-    "y = vector[:,1]\n",
-    "z = vector[:,2]\n",
-    "plt.plot(y,z,'o',color='b')\n",
-    "vector = particles\n",
-    "x = vector[:,0]\n",
-    "y = vector[:,1]\n",
-    "z = vector[:,2]\n",
-    "plt.plot(y,z,'o',color='r')"
    ]
   }
  ],
