Heterodataset in main

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -52,6 +52,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\20182319\\AppData\\Local\\anaconda3\\envs\\DEM-GNN2\\Lib\\site-packages\\torch_geometric\\data\\dataset.py:240: UserWarning: The `pre_transform` argument differs from the one used in the pre-processed version of this dataset. If you want to make use of another pre-processing technique, pass `force_reload=True` explicitly to reload the dataset.\n",
+      "  warnings.warn(\n",
+      "Processing...\n",
+      "100%|██████████| 2000/2000 [02:32<00:00, 13.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-processing data:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 198000/198000 [03:49<00:00, 864.41it/s]\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ML_functions import HeteroDEMDataset\n",
+    "dataset = HeteroDEMDataset('2Sphere',force_reload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 198000/198000 [00:14<00:00, 13559.42it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[3.2771032e-01, 5.3771483e+04, 2.3168819e-01],\n",
+       "        [3.2771032e-01, 5.3771483e+04, 2.3168819e-01]],\n",
+       "\n",
+       "       [[3.2771032e-01, 5.3771483e+04, 2.3168819e-01],\n",
+       "        [3.2771032e-01, 5.3771483e+04, 2.3168819e-01]],\n",
+       "\n",
+       "       [[3.2771032e-01, 5.3771483e+04, 2.3168819e-01],\n",
+       "        [3.2771032e-01, 5.3771483e+04, 2.3168819e-01]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[3.5264248e-01, 1.6402555e+04, 2.0066086e-01],\n",
+       "        [3.5264248e-01, 1.6402555e+04, 2.0066086e-01]],\n",
+       "\n",
+       "       [[3.5264248e-01, 1.6402555e+04, 2.0066086e-01],\n",
+       "        [3.5264248e-01, 1.6402555e+04, 2.0066086e-01]],\n",
+       "\n",
+       "       [[3.5264248e-01, 1.6402555e+04, 2.0066086e-01],\n",
+       "        [3.5264248e-01, 1.6402555e+04, 2.0066086e-01]]], shape=(198000, 2, 3))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = dataset[0]\n",
+    "np.array([data.x_dict['particle'] for data in tqdm(dataset)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch_geometric.transforms as T\n",
+    "pre_transform = T.Compose([T.ToUndirected(),T.Cartesian(False),T.Distance(norm=False,cat=True)])\n",
+    "data = pre_transform(data['particle'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['particle'].y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -83,38 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " Mean of normalized resultantant forces \n",
-      "\n",
-      "MNRF: Groundtruth                                 0.023\n",
-      "MNRF: layer1_Push                                 0.476\n",
-      "MNRF: layer2_Push                                 0.381\n",
-      "MNRF: Allout_Push                                 0.416\n",
-      "MNRF: layer4_Push                                 0.411\n",
-      "\n",
-      " One-step Mean Squared Error \n",
-      "\n",
-      "MSE: layer1_Push                                  0.863\n",
-      "MSE: layer2_Push                                  0.849\n",
-      "MSE: Allout_Push                                  0.847\n",
-      "MSE: layer4_Push                                  0.858\n",
-      "\n",
-      " Mean number of particles escaping Boundary Conditions \n",
-      "\n",
-      "Escaping Particles: layer1_Push                   0.100\n",
-      "Escaping Particles: layer2_Push                   0.000\n",
-      "Escaping Particles: Allout_Push                   0.000\n",
-      "Escaping Particles: layer4_Push                   0.000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Evaluation import GetExperimentSettings,EvaluateExperiment\n",
     "exp_settings = GetExperimentSettings('N400layer','N400_Mono',push=True)\n",
@@ -139,9 +212,11 @@
    "outputs": [],
    "source": [
     "from Plotting import PlotTrainingLoss\n",
-    "dataset_name = 'N400_Mono'\n",
-    "model_ident = 'Allout'\n",
-    "PlotTrainingLoss(dataset_name,model_ident,push=True)\n"
+    "dataset_name = '2Sphere'\n",
+    "model_ident = 'lr_medium'\n",
+    "fig,axs = PlotTrainingLoss(dataset_name,model_ident,push=True)\n",
+    "\n",
+    "fig.suptitle(f\"Model: {model_ident}\")\n"
    ]
   },
   {
